tests/unit/macho/fat/snapshots/unit__macho__fat__test_patching__rpath_add-4.snap
---
source: tests/unit/macho/fat/test_patching.rs
expression: changed_macho.rpaths
---
[
    "made_up_path",
    "path_graf",
    "abababababababababababaabbababababababababab",
]
